src/scss/style.scss
body {
  height: 100%;
}
.rounded-card {
  border-radius: 1rem;

  img {
    border-top-left-radius: 1rem;
    border-top-right-radius: 1rem;
  }
}
.border-none {
  border: none;
}
// RANKING PAGE
#ranking,
#controls-section {
  width: 60%;
  margin: auto;
}
#cards-section {
  padding-top: 0px;
  .card {
    width: 18rem;
  }
}

#controls-section {
  a {
    margin-left: 1rem;
  }
}

progress {
  border: 0;
  background: #000;
  border-radius: 80px;
  width: 100%;
}

progress::-moz-progress-bar {
  border-radius: 80px;
  background: linear-gradient(
    to right,
    rgba(11, 113, 173, 0.8),
    rgba(90, 106, 255, 1)
  );
}

progress::-webkit-progress-bar {
  background: #000;
  border-radius: 80px;
}

progress::-webkit-progress-value {
  border-radius: 80px;
  background: linear-gradient(
    to right,
    rgba(11, 113, 173, 0.8),
    rgba(90, 106, 255, 1)
  );
}

